--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ Pricing Page
 }
 .Ellipse-5-copy-4 {
   width: 80px;
-  right:-40px;
+  right:-535px;
   border-radius: 38px;
   position: absolute;
   height: 80px;
@@ -327,6 +327,89 @@ Pricing Page
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
   border: solid 6px #37debb;
 }
+/* Table style */
+.project-tab {
+  padding: 0%;
+  margin-top: 0%;
+}
+.project-tab #tabs{
+  background: #007b5e;
+  color: #eee;
+}
+.project-tab #tabs h6.section-title{
+  color: #eee;
+}
+.project-tab #tabs .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color: #00366c;
+  background-color: transparent;
+  border-color: transparent transparent #f3f3f3;
+  border-bottom: 3px solid #37debb !important;
+  font-size: 20px;
+  font-weight: bold;
+}
+.project-tab .nav-link {
+  border: 1px solid transparent;
+  border-top-left-radius: .25rem;
+  border-top-right-radius: .25rem;
+  color: #00366c;
+  font-size: 16px;
+  opacity: 0.8;
+  font-weight: 600;
+  
+}
+.project-tab .nav-link:hover {
+  border: none;
+}
+.project-tab thead{
+  /* background: #f3f3f3; */
+  color: #333;
+}
+.project-tab a{
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
+}
+.table thead th {
+  vertical-align: bottom;
+  border-bottom: 0px solid #dee2e6;
+}
+.table td, .table th {
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 0px solid #dee2e6;
+}
+@media screen and (max-width: 575px) {
+  .table-xs-responsive th, .table-xs-responsive td {
+      width: 100% !important;
+      display: block !important;
+      box-sizing:border-box;
+  }
+  }
+  
+  @media screen and (max-width: 767px) {
+  .table.table-sm-responsive th, .table.table-sm-responsive td {
+      width: 100% !important;
+      display: block !important;
+      box-sizing:border-box;
+  }
+  }
+  
+  @media screen and (max-width: 992px) {
+  .table.table-sm-responsive th, .table.table-sm-responsive td {
+      width: 100% !important;
+      display: block !important;
+      box-sizing:border-box;
+  }
+  }
+  
+  @media screen and (max-width: 1200px) {
+  .table.table-sm-responsive th, .table.table-sm-responsive td {
+      width: 100% !important;
+      display: block !important;
+      box-sizing:border-box;
+  }
+  }
+  
 /*========================================================================
 
 HealthCare Page 
